--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Montserrat:wght@500&display=swap" rel="stylesheet">
 
-  <script defer type="module" src="../scripts/dish-generate.js" charset="utf-8"></script>
-  <script defer type="module" src="../scripts/nav-generate.js" charset="utf-8"></script>
+  <script defer type="module" src="./scripts/dish-generate.js" charset="utf-8"></script>
+  <script defer type="module" src="./scripts/nav-generate.js" charset="utf-8"></script>
 
-  <link rel="stylesheet" href="../css/style1.css">
+  <link rel="stylesheet" href="./css/style1.css">
   <title>Sushi</title>
 </head>
 
