--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <div class="meny-pic">
 
-        <img src="images/food/lunch.jpg" alt="">
+        <img src="images/food/pic5.jpg" alt="">
         <!--Her printes det bilder gjennom JS med  mouseover effekt  -->
 
       </div>
@@ -161,6 +161,7 @@
 
 
     <div class="footer-box">
+
       <div class="box box1">
         <img src="./images/other/pic1.jpg" alt="">
         <p>Dear customers, From Monday 15.03 we are temporarily closing the doors to our restaurant.
@@ -183,7 +184,10 @@
         <p>たたき | Tuna Tataki «There’s no such thing as perfection» some people say.
           «Challenge accepted» our Chef says💥 Our dors are open today until 9pm. 🖤</p>
       </div>
+
+
     </div>
+
 
 
     <div class="modal">
@@ -213,7 +217,7 @@
           </div>
 
           <div class="field">
-            <label class="label">Email</label>
+            <label class="label">Telefon</label>
             <div class="control">
               <input class="input" type="text" placeholder="olanordmann@hotmail.com">
             </div>
