--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
     <!-- Meny images -->
 
-    <div class="meny">
-      <div class="aos">
+    <div class="meny aos">
+      <div class="">
         <h4>M e n y</h4>
         <ul class="meny-list">
           <!-- Her printes meni-list gjennom js -->
