--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <!-- Meny images -->
 
-    <div class="meny aos">
+    <div class="meny ">
       <div class="">
         <h4>M e n y</h4>
         <ul class="meny-list">
