--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         </header>
         <!-- Body -->
         <section class="modal-card-body">
-          <img src="../images/other/samuray.png" alt="">
+          <img src="images/other/samuray.png" alt="">
           <!-- Form som styrer at input blir sendt på mail -->
           <form id="my-form" action="https://formsubmit.co/veljko_kv@hotmail.com" method="POST" />
           <input type="hidden" name="_subject" value="Ny bord bestillig!">
