--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     </main>
 
     <!-- Modal bestilling av bord -->
-    <div class="modal modal1 modal-fx-fadeInScale">
+    <div class="modal modal1 modal-fx-3dSlit">
       <div class="modal-background modal-background1"></div>
       <div class="modal-card modal-content">
         <!-- Head -->
