--- a/html/meny.html
+++ b/html/meny.html
@@ -216,7 +216,7 @@
     </div>
 
     <!-- Modal handlekurven -->
-    <div class="modal modal2 modal-fx-fadeInScale">
+    <div class="modal modal2 modal-fx-3dSlit">
       <div class="modal-background modal-background2"></div>
       <div class="modal-card modal-content">
         <!-- Head -->
