--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </header>
     <!-- Titel -->
     <div id="swup"class="transition-fade">
-      <h1 class="title"><span style="font-weight:normal;">Veljko`s </span><span style="color:#8c0000;">Sushi</span></h1>
+      <h1 class="title"><span style="font-weight:normal;">Sushi </span><span style="color:#8c0000;">bar</span></h1>
     </div>
     <!-- Intro -->
     <div class="intro">
